# scs-tutorial

./: .gitignore  README.md
1.1.linux_intro/: printenv.sh
3.1.hello_world/: hello_world.cc
3.2.building_cpp/: cleanup.sh
3.2.building_cpp/include/: database_lib.h
3.2.building_cpp_cmake/src/: database_lib.cc  grocery_db.cc
3.3.building_cpp_cmake/: CMakeLists.txt
3.3.building_cpp_cmake/src/: CMakeLists.txt  movies_db.cc
3.3.building_cpp_cmake/test/: CMakeLists.txt
3.4.basics/src/: CMakeLists.txt  analyze_kitchen_fire.cc  basic_class.cc  config_manager.cc  cpplint_test.h  data_structures.cc  easy_singleton.h  iosched_factory.cc  libstd.cc  make_kitchen_fire.cc  mixins.cc  parameter_pass.cc  posix.cc  singleton.cc  singleton.h  stdio.cc  timer.h
4.Github/: example
5.2.DockerBasics/: Dockerfile
5.2.docker_clusters/: docker-compose.yaml
5.3.ContainerizedClusters/: Dockerfile  docker-compose.yaml
5.3.docker_debugging/: Dockerfile
8.Chamelon/: sync.sh
